--- a/app/views/displays/_individual_event.html.erb
+++ b/app/views/displays/_individual_event.html.erb
@@ -1,6 +1,5 @@
 <tr>
-  <td>
-    <strong><%= event.content %></strong>
-    <%= event.notes %>
-  </td>
+  <td><strong><%= event.content %></strong></td>
+  <td><%= event.notes %></td>
+  <td><%= link_to "Dismiss", events_dismiss_path(event.id) %></td>
 </tr>
