improve usability of taggings

--- a/app/views/displays/index.html.erb
+++ b/app/views/displays/index.html.erb
@@ -1,4 +1,5 @@
 <%= link_to "Add and edit objects", "/admin" %>
+<%= link_to "Generate all blank names", people_generate_names_path %>
 
 <h2>Upcoming birthdays</h2>
 <table>
