fix error in double-generation of birthdays around new year

--- a/app/views/displays/index.html.erb
+++ b/app/views/displays/index.html.erb
@@ -1,5 +1,6 @@
 <%= link_to "Add and edit objects", "/admin" %>
 <%= link_to "Generate all blank names", people_generate_names_path %>
+<%= link_to "Generate all birthdays", events_birthday_generator_path %>
 
 <h2>Upcoming birthdays</h2>
 <table>
