--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,7 +1,10 @@
+<%= link_to "Home", root_path %><br>
+<%= link_to "Back to tags", tags_path %>
+
 <h1><%= @tag.name %></h1>
 
 <ul>
   <% @people.each do |person| %>
-    <li><%= link_to "#{person.name}", "/admin/person/#{person.id}/edit" %></li>
+    <li><%= link_to "#{person.name}", "#{person.link_string}" %></li>
   <% end %>
 </ul>
