--- a/app/views/displays/index.html.erb
+++ b/app/views/displays/index.html.erb
@@ -1,6 +1,7 @@
-<%= link_to "Add and edit objects", "/admin" %>
-<%= link_to "Generate all blank names", people_generate_names_path %>
-<%= link_to "Generate all birthdays", events_birthday_generator_path %>
+<%= link_to "Add and edit objects", "/admin" %><br />
+<%= link_to "Generate all blank names", people_generate_names_path %><br />
+<%= link_to "Generate all birthdays", events_birthday_generator_path %><br />
+<%= link_to "Tag listing", tags_path %><br />
 
 <h2>Upcoming birthdays</h2>
 <table>
