starting person profile improvement

--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @person.full_name %>-edit page</h2>
+<title><%= @person.full_name %> - edit page</title>
 
 <p><strong>Current tags:</strong></p>
 
