basics of profile info done not formatted

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,10 @@
  *= require_self
  *= require_tree .
  */
+
+.picture {
+  color: blue;
+  height: 100px;
+  width: 100px;
+  position: absolute;
+}
