--- a/app/views/displays/index.html.erb
+++ b/app/views/displays/index.html.erb
@@ -3,9 +3,9 @@
 <%= link_to "Generate all birthdays", events_birthday_generator_path %><br />
 <%= link_to "Tag listing", tags_path %><br />
 
-<h2>Upcoming birthdays</h2>
+<h2>Upcoming time-based events</h2>
 <table>
-  <% @birthdays.sort.each do |event| %>
+  <% @birthdays.sort_by{|b| b.happening_date}.each do |event| %>
     <%= render partial: "/displays/individual_event", locals: {event: event} %>
   <% end %>
 </table>
@@ -13,11 +13,5 @@
 <table>
   <% @wants_and_has.each do |event| %>
     <%= render partial: "/displays/individual_event", locals: {event: event} %>
-  <% end %>
-</table>
-<h2>Recent taggings</h2>
-<table>
-  <% @recent_taggings.each do |tagging| %>
-    <%= render partial: "/people/tagging", locals: {tagging: tagging} %>
   <% end %>
 </table>
