csv returning each row of the li parser

--- a/app/views/displays/_individual_event.html.erb
+++ b/app/views/displays/_individual_event.html.erb
@@ -4,6 +4,11 @@
        <%= link_to "#{person.first_name}", "#{person.link_string}" %>
     <% end %>
   </td>  
+  <td>
+    <% if event.happening_date.present? %>
+      <%= event.happening_date.strftime("%b %d") %>
+    <% end %>
+  </td>
   <td><strong><%= event.content %></strong></td>
   <td><%= event.notes %></td>
   <td>
