refactor event method to let less slip through cracks

--- a/app/views/displays/index.html.erb
+++ b/app/views/displays/index.html.erb
@@ -4,15 +4,15 @@
 <%= link_to "Generate all birthdays", events_birthday_generator_path %><br />
 <%= link_to "Tag listing", tags_path %><br />
   
-<h2>Upcoming time-based events</h2>
+<h2>Events with specific times</h2>
 <table>
-  <% @time_based_events.sort_by{|b| b.happening_date}.each do |event| %>
+  <% @events[:specific_dates].each do |event| %>
     <%= render partial: "/displays/individual_event", locals: {event: event} %>
   <% end %>
 </table>
-<h2>Outstanding wants and haves</h2>
+<h2>Events with time ranges</h2>
 <table>
-  <% @wants_and_has.each do |event| %>
+  <% @events[:ranges].each do |event| %>
     <%= render partial: "/displays/individual_event", locals: {event: event} %>
   <% end %>
 </table>
