partialize event display

--- a/app/views/displays/index.html.erb
+++ b/app/views/displays/index.html.erb
@@ -3,16 +3,5 @@
 <%= link_to "Generate all blank names", people_generate_names_path %><br />
 <%= link_to "Generate all birthdays", events_birthday_generator_path %><br />
 <%= link_to "Tag listing", tags_path %><br />
-  
-<h2>Events with specific times</h2>
-<table>
-  <% @events[:specific_dates].each do |event| %>
-    <%= render partial: "/displays/individual_event", locals: {event: event} %>
-  <% end %>
-</table>
-<h2>Events with time ranges</h2>
-<table>
-  <% @events[:ranges].each do |event| %>
-    <%= render partial: "/displays/individual_event", locals: {event: event} %>
-  <% end %>
-</table>
+
+<%= render partial: "/displays/event_display", locals: {events: @events} %>
