--- a/app/views/user_mailer/daily_email.html.erb
+++ b/app/views/user_mailer/daily_email.html.erb
@@ -1,1 +1,3 @@
-I'm an email!
+The links in this aren't live, for now. <%= link_to "Go to the mnemonic site", root_url %> to make changes
+
+<%= render partial: "/displays/event_display", locals: {events: @events} %>
