--- a/app/views/displays/_individual_event.html.erb
+++ b/app/views/displays/_individual_event.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td>
-    <% if person = event.person and person.first_name %>
-       <%= link_to "#{person.first_name}", "#{person.link_string}" %>
+    <% if event.person.present? and event.person.first_name.present? %>
+       <%= link_to "#{event.person.first_name}", "#{event.person.link_string}" %>
     <% end %>
   </td>  
   <td>
@@ -12,7 +12,7 @@
   <td><strong><%= event.content %></strong></td>
   <td><%= event.notes %></td>
   <td>
-    <% if event.person and event.person.email %>
+    <% if event.person.present? and event.person.email.present? %>
        <%= mail_to "#{event.person.email}" %>
     <% end %>
   </td>  
