--- a/app/views/displays/_individual_event.html.erb
+++ b/app/views/displays/_individual_event.html.erb
@@ -20,6 +20,6 @@
   <td><%= link_to "Tried Openly", events_dismiss_path(event.id,:tried_openly), class: "btn btn-success btn-sm" %></td>
   <td><%= link_to "Pass", events_dismiss_path(event.id,:pass), class: "btn btn-warning btn-sm" %></td>
   <td><%= link_to "Pass & estrange", events_dismiss_path(event.id,:pass_and_estrange), class: "btn btn-danger btn-sm" %></td>
-  <td><%= link_to "Defer 1 wk", "#", class: "btn btn-info btn-sm" %></td>
-  <td><%= link_to "Defer day-1", "#", class: "btn btn-info btn-sm" %></td>
+  <td><%= link_to "Defer 1 wk", events_snooze_path(event.id,7), class: "btn btn-info btn-sm" %></td>
+  <td><%= link_to "Defer day-1", events_snooze_path(event.id,"day-1"), class: "btn btn-info btn-sm" %></td>
 </tr>
