bug self about nav bar and link index to person edit rather than admin

--- a/app/views/displays/_individual_event.html.erb
+++ b/app/views/displays/_individual_event.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td>
     <% if event.person.present? and event.person.first_name.present? %>
-       <%= link_to "#{event.person.first_name}", "#{event.person.link_string}" %>
+       <%= link_to "#{event.person.first_name}", edit_person_path(event.person.id) %>
     <% end %>
   </td>  
   <td>
