--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,9 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
+    <div>STUB: You should make a nav bar here!</div>
+    <p class="notice bg-success"><%= notice %></p>
+    <p class="alert bg-alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
