--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <div>STUB: You should make a nav bar here!</div>
+    <div>STUB: You should make a nav bar here! And make flashes take less space!</div>
     <p class="notice bg-success"><%= notice %></p>
     <p class="alert bg-alert"><%= alert %></p>
     <%= yield %>
