--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,26 +1,32 @@
-<h1>
-  <% if @survey.name.present? %>
-    <%= "#{@survey.name}" %>
-  <% else %>
-    <%= "Survey ID: #{@survey.id}" %>
-  <% end %>
-</h1>
+<div class="container">
+  <div class="row">
 
-<p>
-  <% if @survey_purpose == "before_survey" %>
-    This is a before survey. <%= link_to "Pick a plan!", plans_with_deed_path(@deed_id) %>
-  <% elsif @survey_purpose == "after_survey" %>
-    This is an after survey. <%= link_to "See the before and after!", deed_path(@deed_id) %>
-  <% else %>
-    This is a standalone survey
-  <% end %>
-</p>
+    <h1>
+      <% if @survey.name.present? %>
+        <%= "#{@survey.name}" %>
+      <% else %>
+        <%= "Survey ID: #{@survey.id}" %>
+      <% end %>
+    </h1>
 
-<p>Taken: <%= "#{@survey.created_at.strftime("%B %d, %Y")}" %></p>
+    <p>
+      <% if @survey_purpose == "before_survey" %>
+        This is a before survey. <%= link_to "Pick a plan!", plans_with_deed_path(@deed_id) %>
+      <% elsif @survey_purpose == "after_survey" %>
+        This is an after survey. <%= link_to "See the before and after!", deed_path(@deed_id) %>
+      <% else %>
+        This is a standalone survey
+      <% end %>
+    </p>
 
-<% @survey.answers.each do |answer| %>
-  <div>
-    <p><strong><%= "#{answer.question.ask}" %></strong></p>
-    <p><%= answer.get_answer %></p>
+    <p>Taken: <%= "#{@survey.created_at.strftime("%B %d, %Y")}" %></p>
+
+    <% @survey.answers.each do |answer| %>
+      <div>
+        <p><strong><%= "#{answer.question.ask}" %></strong></p>
+        <p><%= answer.get_answer %></p>
+      </div>
+    <% end %>
+
   </div>
-<% end %>
+</div>
