--- a/app/views/deeds/show.html.erb
+++ b/app/views/deeds/show.html.erb
@@ -14,18 +14,14 @@
           <th><%= "#{question.ask}" %></th>
         <% end %>
       </tr>
-      <tr>
-        <td>Before</td>
-        <% @same_questions.each do |question| %>
-          <td><%= @before_survey.answers.select{|a| a.question_id == question.id}[0].get_answer %></td>
-        <% end %>
-      </tr>
-      <tr>
-        <td>After</td>
-        <% @same_questions.each do |question| %>
-          <td><%= @after_survey.answers.select{|a| a.question_id == question.id}[0].get_answer %></td>
-        <% end %>    
-      </tr>
+      <% [{title: "Before", var: @before_survey},{title: "After", var: @after_survey}].each do |line| %>
+        <tr>
+          <td><%= "#{line[:title]}" %></td>
+          <% @same_questions.each do |question| %>
+            <td><%= line[:var].answers.select{|a| a.question_id == question.id}[0].get_answer %></td>
+          <% end %>
+        </tr>
+      <% end %>
     </table>
 
     <%= link_to "Back to home", root_path %>
