--- a/app/views/people/table.html.erb
+++ b/app/views/people/table.html.erb
@@ -49,13 +49,13 @@
       <h3>The numbers</h3>
       <p>Horizontal: potential; Vertical: now</p>
 
-      <ul>
-        <li>0 Acquaintance</li>
-        <li>1 Friend, but not especially close.</li>
-        <li>2 Good friend, not inner circle.</li>
-        <li>3 Edge of inner circle</li>
-        <li>4 Lifelong friend</li>
-      </ul>
+      <dl class="dl-horizontal">
+        <dt>0</dt><dd>Acquaintance</dd>
+        <dt>1</dt><dd>Friend, but not especially close.</dd>
+        <dt>2</dt><dd>Good friend, not inner circle.</dd>
+        <dt>3</dt><dd>Edge of inner circle</dd>
+        <dt>4</dt><dd>Lifelong friend</dd>
+      </dl>
     </div>
     <div class="col-md-6">
       <h3>The colors</h3>
