--- a/app/views/people/table.html.erb
+++ b/app/views/people/table.html.erb
@@ -48,7 +48,6 @@
     <div class="col-md-6">
       <h3>The numbers</h3>
       <p>Horizontal: potential; Vertical: now</p>
-
       <dl class="dl-horizontal">
         <dt>0</dt><dd>Acquaintance</dd>
         <dt>1</dt><dd>Friend, but not especially close.</dd>
@@ -59,7 +58,7 @@
     </div>
     <div class="col-md-6">
       <h3>The colors</h3>
-      <table class="table">
+      <table class="table table-bordered">
         <tr><td class="success">Talk with at least every 15 days</td></tr>
         <tr><td class="info">Talk with at least every 30 days</td></tr>
         <tr><td class="warning">Talk with at least every 90 days</td></tr>
