deed index and more robust deed show page

--- a/app/views/deeds/show.html.erb
+++ b/app/views/deeds/show.html.erb
@@ -3,26 +3,34 @@
 
     <h1><%= "Deed ##{@deed.id}" %></h1>
 
-    <h3>Plan</h3>
-    <p><%= @plan.name %></p>
+    <% if (@same_questions.present? and @plan.present?) %>
+      <h3>Plan</h3>
+      <p><%= "#{@plan.name}" %></p>
 
-    <h3>Surveys</h3>
-    <table class="table">
-      <tr>
-        <th></th>
-        <% @same_questions.each do |question| %>
-          <th><%= "#{question.ask}" %></th>
-        <% end %>
-      </tr>
-      <% [{title: "Before", var: @before_survey},{title: "After", var: @after_survey}].each do |line| %>
+      <h3>Surveys</h3>
+      <table class="table">
         <tr>
-          <td><%= "#{line[:title]}" %></td>
+          <th></th>
           <% @same_questions.each do |question| %>
-            <td><%= line[:var].answers.select{|a| a.question_id == question.id}[0].get_answer %></td>
+            <th><%= "#{question.ask}" %></th>
           <% end %>
         </tr>
-      <% end %>
-    </table>
+        <% [{title: "Before", var: @before_survey},{title: "After", var: @after_survey}].each do |line| %>
+          <tr>
+            <td><%= "#{line[:title]}" %></td>
+            <% @same_questions.each do |question| %>
+              <td><%= line[:var].answers.select{|a| a.question_id == question.id}[0].get_answer %></td>
+            <% end %>
+          </tr>
+        <% end %>
+      </table>
+    <% else %>
+      <p>This deed is missing one or more of:</p>
+      <ul>
+        <li>A plan</li>
+        <li>Survey questions</li>
+      </ul>
+    <% end %>
 
     <%= link_to "Back to home", root_path %>
 
