navbar, remainder days display on people table

--- a/app/views/displays/index.html.erb
+++ b/app/views/displays/index.html.erb
@@ -1,7 +1,8 @@
-<%= link_to "Add and edit objects", "/admin" %><br />
-<%= link_to "Start a new deed!", deeds_precommit_path %><br />
-<%= link_to "Generate all blank names", people_generate_names_path %><br />
-<%= link_to "Generate all birthdays", events_birthday_generator_path %><br />
-<%= link_to "Tag listing", tags_path %><br />
+<br>
+<ul>
+  <li><%= link_to "Generate all blank names", people_generate_names_path %></li>
+  <li><%= link_to "Generate all birthdays", events_birthday_generator_path %></li>
+  <li><%= link_to "Tag listing", tags_path %></li>
+</ul>
 
 <%= render partial: "/displays/event_display", locals: {events: @events} %>
